🐛 fixed new card position and flickering

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -128,24 +128,21 @@ body {
   -moz-user-select: none;
   -ms-user-select: none;
 
-  &:hover {
-      @include material-shadow(2);
-      position: relative;
-      z-index: 42; //ensures that the shadow is over other cards
-  }
-
   &.editing {
       @include material-shadow(3);
       position: relative;
       z-index: 42; //ensures that the shadow is over other cards
   }
 
-  &--floating {
+  &--floating, &--floating.editing {
+      position: absolute;
       top: 10%;
-      left: 10%;
+      left: 50%;
       z-index: 9999;
       width: 300px;
       height: 150px;
+      margin: 0 0 0 -150px;
+      @include material-shadow(5);
   }
 
   &__content {
